# Prescient

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  Dockerfile  EVALUATION.md  IMPLEMENTATION.md  LICENSE  README.md  build.sh  docker-compose.yml  requirements.txt  run.sh  start.sh  stop.sh
.github/: CODEOWNERS
.github/workflows/: build.yml
docs/: CONTRIBUTING.md  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md
frontend/: app.js  index.html  server.py  style.css
scripts/: demo.sh  evaluate.py  generate_corpus.py  generate_savings_report.py  run_adaptive.sh  setup_env.sh  time_o2_pipeline.sh
src/model/: _render.py  feature_importance.py  predict.py  show_features.py  train_model.py
src/passes/: AdaptivePipeline.cpp  IRComplexityPass.cpp
src/timing/: PassTimingWrapper.cpp
testcases/: sample_math.c
testcases/evaluation/: test01_arith_eval.c  test02_loops_eval.c  test03_branches_eval.c  test04_pointers_eval.c  test05_structs_eval.c  test06_recursion_eval.c  test07_analysis.md  test07_failure_case.c  test08_mixed_eval.c
testcases/training/: t01_simple_leaf.c  t02_nested_loops.c  t03_aliasing.c  t04_many_branches.c  t05_type_complex.c  t06_phi_heavy.c  t07_large_function.c  t08_recursive.c  t09_simd_friendly.c  t10_pathological.c  t11_string_ops.c  t12_sorting.c  t13_matrix_ops.c  t14_bitwise.c  t15_linked_list.c  t16_hash_table.c  t17_numerical.c  t18_crypto_hash.c  t19_graph_algo.c  t20_signal_proc.c  t21_state_machine.c  t22_binary_tree.c  t23_compression.c  t24_image_proc.c  t25_dynamic_prog.c  t26_array_search.c  t27_heap_ops.c  t28_vector_math.c  t29_scheduler.c  t30_arena_alloc.c  t31_physics_sim.c  t32_interpreter.c  t33_geometry.c  t34_trivial_leaf.c  t35_deep_nesting.c  t36_multi_struct.c  t37_regex_like.c  t38_ring_buffer.c  t39_statistics.c  t40_heavy_compute.c
